Add h1 tags to body element

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+   <h1>Home</h1>
+   <h1>Portfolio</h1>
+   <h1>Contact</h1>
 </body>
 </html>
