Add header element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-   <h1>Home</h1>
-   <h1>Portfolio</h1>
-   <h1>Contact</h1>
+   <header>
+      <h1>Home</h1>
+      <h1>Portfolio</h1>
+      <h1>Contact</h1>
+   </header>
 </body>
 </html>
