--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-      <h1>Home</h1>
+      <h1><a href="home.html">Home</a></h1>
       <h1>Portfolio</h1>
       <h1>Contact</h1>
    </header>
