--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header>
       <h1><a href="home.html">Home</a></h1>
-      <h1>Portfolio</h1>
+      <h1><a href="portfolio.html">Portfolio</a></h1>
       <h1>Contact</h1>
    </header>
 </body>
