--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
       <h1><a href="home.html">Home</a></h1>
       <h1><a href="portfolio.html">Portfolio</a></h1>
-      <h1>Contact</h1>
+      <h1><a href="contact.html">Contact</a></h1>
    </header>
 </body>
 </html>
