--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,6 @@
    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-   
+   <a href="index.html">Return to homepage</a>
 </body>
 </html>
