--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-      <h1><a href="home.html">Home</a></h1>
+      <h1><a href="index.html">Home</a></h1>
       <h1><a href="portfolio.html">Portfolio</a></h1>
       <h1><a href="contact.html">Contact</a></h1>
    </header>
