--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
       <h1><a href="portfolio.html">Portfolio</a></h1>
       <h1><a href="contact.html">Contact</a></h1>
    </header>
+   <main>
+      <img src="img/cranegirl-creations-logo.png" alt="[Cranegirl Creations Logo.]">
+   </main>
 </body>
 </html>
