--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-   <a href="index.html">Return to homepage</a>
+   <header>
+      <a href="index.html">Return to homepage</a>
+   </header>
 </body>
 </html>
