Link instagram to contact.html

--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,10 @@
    <header>
       <a href="index.html">Return to homepage</a>
    </header>
+   <main>
+         <p>Ari Knight can be reached by phone at (541) 760-9676 or by email at cranegirlcreations@gmail.com. 
+         <br> To see more work, go to: 
+         <br> <a href="https://www.instagram.com/cranegirlcreations/">@cranegirlcreations</a> on Instagram 
+   </main>
 </body>
 </html>
