--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
          <p>Ari Knight can be reached by phone at (541) 760-9676 or by email at cranegirlcreations@gmail.com. 
          <br> To see more work, go to: 
          <br> <a href="https://www.instagram.com/cranegirlcreations/">@cranegirlcreations</a> on Instagram 
+         <br> <a href="https://www.facebook.com/cranegirlcreations/">Cranegirl Creations</a> on Facebook.</p>
    </main>
 </body>
 </html>
