Add div class to contact.html

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <header>
-      <a href="index.html">Return to homepage</a>
+      <div class="homepage">
+         <a href="index.html">Return to homepage</a>
+      </div>
    </header>
    <main>
          <p>Ari Knight can be reached by phone at (541) 760-9676 or by email at cranegirlcreations@gmail.com. 
