Add div class to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,10 @@
    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-   <a href="index.html">Return to homepage</a>
+   <header>
+      <div class="homepage">
+         <a href="index.html">Return to homepage</a>
+      </div>
+   </header>
 </body>
 </html>
