Add div class to main contact.html

--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,12 @@
       <div class="homepage">
          <a href="index.html">Return to homepage</a>
       </div>
-   <main>
-         <p>Ari Knight can be reached by phone at (541) 760-9676 or by email at cranegirlcreations@gmail.com. 
+      <div class="contact">
+         Ari Knight can be reached by phone at (541) 760-9676 or by email at cranegirlcreations@gmail.com. 
          <br> To see more work, go to: 
-         <br> <a href="https://www.instagram.com/cranegirlcreations/">@cranegirlcreations</a> on Instagram 
-         <br> <a href="https://www.facebook.com/cranegirlcreations/">Cranegirl Creations</a> on Facebook.</p>
-   </main>
+         <br> <div class="social-media">
+            <a href="https://www.instagram.com/cranegirlcreations/">@cranegirlcreations</a></div> on Instagram 
+         <br> <div class="social-media"> <a href="https://www.facebook.com/cranegirlcreations/">Cranegirl Creations</a> </div>on Facebook. 
+      </div>
 </body>
 </html>
