Add div class to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,5 +10,8 @@
       <div class="homepage">
          <a href="index.html">Return to homepage</a>
       </div>
+      <div class="portfolio">
+         
+      </div>
 </body>
 </html>
