Add image to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
       <div class="homepage">
          <a href="index.html">Return to homepage</a>
       </div>
-      <div class="portfolio">
-         
+      <div class="portfolio-images">
+         <img src="img/prism-logo.png" alt="">
       </div>
 </body>
 </html>
