Add image to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,8 @@
          <a href="index.html">Return to homepage</a>
       </div>
       <div class="portfolio-images">
-         <img src="img/prism-logo.png" alt="">
+         <img src="img/prism-logo.png" alt="[Prism Company Logo.]">
+         <img src="img/wibc-logo.png" alt="[T-shirt design for the Western International Band Clinic.]">
       </div>
 </body>
 </html>
