Add image to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
       <div class="portfolio-images">
          <img src="img/prism-logo.png" alt="[Prism Company Logo.]">
          <img src="img/wibc-logo.png" alt="[T-shirt design for the Western International Band Clinic.]">
+         <img src="img/noah-logo.png" alt="[Logo for Noah Thornsbury's music production group.]">
       </div>
 </body>
 </html>
