Add image to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
          <img src="img/prism-logo.png" alt="[Prism Company Logo.]">
          <img src="img/wibc-logo.png" alt="[T-shirt design for the Western International Band Clinic.]">
          <img src="img/noah-logo.png" alt="[Logo for Noah Thornsbury's music production group.]">
+         <img src="img/midwest-clinic-logo.png" alt="[Logo for the Midwest Clinic's 75th anniversary.]">
       </div>
 </body>
 </html>
