Add line breaks to portfolio-images

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
          <a href="index.html">Return to homepage</a>
       </div>
       <div class="portfolio-images">
-         <img src="img/prism-logo.png" alt="[Prism Company Logo.]">
-         <img src="img/wibc-logo.png" alt="[T-shirt design for the Western International Band Clinic.]">
-         <img src="img/noah-logo.png" alt="[Logo for Noah Thornsbury's music production group.]">
-         <img src="img/midwest-clinic-logo.png" alt="[Logo for the Midwest Clinic's 75th anniversary.]">
+         <p><img src="img/wibc-logo.png" width="500" alt="[T-shirt design for the Western International Band Clinic.]"> <br>
+         <img src="img/prism-logo.png" width="500" alt="[Prism Company Logo.]"> <br>
+         <img src="img/noah-logo.png"  width="500" alt="[Logo for Noah Thornsbury's music production group.]"> <br>
+         <img src="img/midwest-clinic-logo.png" width="500" alt="[Logo for the Midwest Clinic's 75th anniversary.]"> <br></p>
       </div>
 </body>
 </html>
